* UTIL type=ALLMERGER | extend argument 'exportCSV' to 'exportCSV=FILE.html' which export the info into EXCEL / HTML format
* UTIL develop display-xpath-for-node-filter | add argument fullxpath - to display also for template info the full. output
* UTIL develop display-xpath-value | introduce argument displayattributename - to only display the attribute, not full content

BUGFIX:
* class DeviceGroup / Template - remove $xmlroot as already defined in trait XmlConvertible
* UTIL ALLMERGER scripts | bugfix for argument exportCSV=FILE.html - to display all merged objects

GENERAL:


2.0.32 (20220318)
UTILS:
* UTIL type=rule | rework 'filter=(service port.counter)' is now 'filter=(service.port.count >,<,=,! COUNT)')
* UTIL type=rule | extend actions=exportToExcel with service Counter
* UTIL type=protocoll-number-download | introduction for future usage
* UTIL type=rule | actions=exportToExcel - introduce 'rulebase' column
* UTIL type=rule | 'filter=(schedule expire.in.days XYZ) renamed to 'filter=(schedule.expire.in.days >,<,=,! XYZ)'
* UTIL type=securityProfilegroup actions=exporttoexcel | introduce information about used location and counter
* UTIL UI - introduce additional arguments for playbook JSON file
* UTIL type=playbook | introduce argument location= handling
* UTIL type=rule | actions=exporttoexcel:file.html,ResolveServiceSummary | improvement for Service Counters

BUGFIX:
* UTIL type=rule | actions=exportToExcel - bugfix for service.count if application-default is set
* UTIL type=rule | 'filter=(service.port.count = PORTCOUNT)' - bugfix to change in code to '=='
* class IP4MAP | bugfix for all filters where IP calculation is used e.g. UTIL type=rule 'filter=(src is.partially.or.fully.included.in.list LIST)'
* class SecurityProfileGroupStrore | bugfix to search for available object name only in current Store